--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0d1ca34e
+	base = 52ff2856
 	trimbase = 
 	parent = debian/noetic/rtt_visualization_msgs
-	previous = 
+	previous = 0d1ca34e
