--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4bf1acca
+	base = 1ff1e3a9
 	trimbase = 
 	parent = debian/noetic/rtt_rospack
-	previous = 
+	previous = 4bf1acca
