--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d1de45f5
+	base = e9bfb458
 	trimbase = 
 	parent = debian/noetic/rtt_stereo_msgs
-	previous = 
+	previous = d1de45f5
