--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3335a3de
+	base = 2b5e1b86
 	trimbase = 
 	parent = debian/noetic/rtt_roscomm
-	previous = 
+	previous = 3335a3de
