--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 56031476
+	base = a27881a1
 	trimbase = 
 	parent = release/noetic/rtt_shape_msgs
-	previous = 
+	previous = 56031476
