--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 06004e76
+	base = 98e4ee1f
 	trimbase = 
 	parent = debian/noetic/rtt_shape_msgs
-	previous = 
+	previous = 06004e76
