--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f5659ed2
+	base = 5600c5e5
 	trimbase = 
 	parent = release/noetic/rtt_trajectory_msgs
-	previous = 
+	previous = f5659ed2
