--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 89cd22fc
+	base = 0bdc665c
 	trimbase = 
 	parent = debian/noetic/rtt_trajectory_msgs
-	previous = 
+	previous = 89cd22fc
