--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9e7cfcb9
+	base = 67191030
 	trimbase = 
 	parent = debian/noetic/rtt_std_srvs
-	previous = 
+	previous = 9e7cfcb9
