--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 92fcd2b5
+	base = 3f45892b
 	trimbase = 
 	parent = debian/noetic/rtt_ros_integration
-	previous = 
+	previous = 92fcd2b5
