--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db9bec8a
+	base = 51989dea
 	trimbase = 
 	parent = release/noetic/rtt_nav_msgs
-	previous = 
+	previous = db9bec8a
