--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 48c0a4c8
+	base = d209878a
 	trimbase = 
 	parent = debian/noetic/rtt_nav_msgs
-	previous = 
+	previous = 48c0a4c8
