--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bfd7c14d
+	base = 52830c5a
 	trimbase = 
 	parent = debian/noetic/rtt_geometry_msgs
-	previous = 
+	previous = bfd7c14d
