--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 13826d4f
+	base = 95f157ef
 	trimbase = 
 	parent = release/noetic/rtt_rosparam
-	previous = 
+	previous = 13826d4f
