--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a57f624b
+	base = 92553aa6
 	trimbase = 
 	parent = debian/noetic/rtt_rosparam
-	previous = 
+	previous = a57f624b
