--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f09abb51
+	base = 8af675b1
 	trimbase = 
 	parent = release/noetic/rtt_rosgraph_msgs
-	previous = 
+	previous = f09abb51
