--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bc94eab8
+	base = a34b3b61
 	trimbase = 
 	parent = debian/noetic/rtt_rosgraph_msgs
-	previous = 
+	previous = bc94eab8
