--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da19b9c5
+	base = da1e2bad
 	trimbase = 
 	parent = debian/noetic/rtt_kdl_conversions
-	previous = 
+	previous = da19b9c5
