--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 376e1d81
+	base = a5efc22e
 	trimbase = 
 	parent = debian/noetic/rtt_std_msgs
-	previous = 
+	previous = 376e1d81
