--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fbc230a2
+	base = 7ed2d3a7
 	trimbase = 
 	parent = debian/noetic/rtt_rosnode
-	previous = 
+	previous = fbc230a2
