--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 221edc92
+	base = 14e36ae0
 	trimbase = 
 	parent = debian/noetic/rtt_sensor_msgs
-	previous = 
+	previous = 221edc92
