--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c1c92a7b
+	base = 2ecb56ff
 	trimbase = 
 	parent = debian/noetic/rtt_diagnostic_msgs
-	previous = 
+	previous = c1c92a7b
