--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d17274bb
+	base = 0cf57a06
 	trimbase = 
 	parent = release/noetic/rtt_rosclock
-	previous = 
+	previous = d17274bb
