--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = add20c94
+	base = 11387c79
 	trimbase = 
 	parent = debian/noetic/rtt_rosclock
-	previous = 
+	previous = add20c94
