--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0820e63
+	base = dc27b0e5
 	trimbase = 
 	parent = debian/noetic/rtt_actionlib
-	previous = 
+	previous = f0820e63
