--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 633457c0
+	base = 0c16900d
 	trimbase = 
 	parent = debian/noetic/rtt_rosdeployment
-	previous = 
+	previous = 633457c0
