--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1250930f
+	base = 28edc2d2
 	trimbase = 
 	parent = debian/noetic/rtt_ros_msgs
-	previous = 
+	previous = 1250930f
