--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 988309c9
+	base = a98de1e6
 	trimbase = 
 	parent = debian/noetic/rtt_dynamic_reconfigure
-	previous = 
+	previous = 988309c9
