--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8ba400d0
+	base = 41ccb0b2
 	trimbase = 
 	parent = debian/noetic/rtt_tf2_msgs
-	previous = 
+	previous = 8ba400d0
