--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 61be93c6
+	base = 285f0e12
 	trimbase = 
 	parent = debian/noetic/rtt_actionlib_msgs
-	previous = 
+	previous = 61be93c6
