--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c012ecaf
+	base = ed36e76a
 	trimbase = 
 	parent = debian/noetic/rtt_common_msgs
-	previous = 
+	previous = c012ecaf
