--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 64e8ed99
+	base = 768502ee
 	trimbase = 
 	parent = debian/noetic/rtt_tf
-	previous = 
+	previous = 64e8ed99
