--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f015007
+	base = ad5fa439
 	trimbase = 
 	parent = debian/noetic/rtt_ros
-	previous = 
+	previous = 0f015007
