--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35dba093
+	base = 7463d625
 	trimbase = 
 	parent = debian/noetic/rtt_visualization_msgs
-	previous = 
+	previous = 35dba093
