--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f2446ca2
+	base = fc63fd90
 	trimbase = 
 	parent = debian/noetic/rtt_rospack
-	previous = 
+	previous = f2446ca2
