--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 60810b3b
+	base = 97d8b532
 	trimbase = 
 	parent = debian/noetic/rtt_stereo_msgs
-	previous = 
+	previous = 60810b3b
