--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0d27ad2a
+	base = 100387c0
 	trimbase = 
 	parent = debian/noetic/rtt_roscomm
-	previous = 
+	previous = 0d27ad2a
