--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6e79928a
+	base = 249f3247
 	trimbase = 
 	parent = debian/noetic/rtt_shape_msgs
-	previous = 
+	previous = 6e79928a
