--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f653e3d8
+	base = d73221ff
 	trimbase = 
 	parent = debian/noetic/rtt_trajectory_msgs
-	previous = 
+	previous = f653e3d8
