--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 11c1aac1
+	base = 4a870f8f
 	trimbase = 
 	parent = debian/noetic/rtt_std_srvs
-	previous = 
+	previous = 11c1aac1
