--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 605c3f4c
+	base = 31fa414e
 	trimbase = 
 	parent = debian/noetic/rtt_ros_integration
-	previous = 
+	previous = 605c3f4c
