--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 109c8565
+	base = 61b7d148
 	trimbase = 
 	parent = debian/noetic/rtt_nav_msgs
-	previous = 
+	previous = 109c8565
