--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4c1f746d
+	base = f34168c6
 	trimbase = 
 	parent = debian/noetic/rtt_geometry_msgs
-	previous = 
+	previous = 4c1f746d
