--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2711b153
+	base = d875d832
 	trimbase = 
 	parent = debian/noetic/rtt_rosparam
-	previous = 
+	previous = 2711b153
