--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9cd13b83
+	base = a1d927c8
 	trimbase = 
 	parent = debian/noetic/rtt_rosgraph_msgs
-	previous = 
+	previous = 9cd13b83
