--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fe590ff9
+	base = b8fa8a2f
 	trimbase = 
 	parent = debian/noetic/rtt_kdl_conversions
-	previous = 
+	previous = fe590ff9
