--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 80a2c3bc
+	base = d6528103
 	trimbase = 
 	parent = debian/noetic/rtt_std_msgs
-	previous = 
+	previous = 80a2c3bc
