--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7ec401ab
+	base = 684ca4f0
 	trimbase = 
 	parent = debian/noetic/rtt_rosnode
-	previous = 
+	previous = 7ec401ab
