--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7fddba32
+	base = 817c41de
 	trimbase = 
 	parent = debian/noetic/rtt_sensor_msgs
-	previous = 
+	previous = 7fddba32
