--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cc72cf83
+	base = f4ea14c6
 	trimbase = 
 	parent = debian/noetic/rtt_diagnostic_msgs
-	previous = 
+	previous = cc72cf83
