--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2a0a0df3
+	base = 2d510a6c
 	trimbase = 
 	parent = debian/noetic/rtt_rosclock
-	previous = 
+	previous = 2a0a0df3
