--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b984691b
+	base = 32a5f059
 	trimbase = 
 	parent = debian/noetic/rtt_actionlib
-	previous = 
+	previous = b984691b
