--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fd2ab076
+	base = 7954379f
 	trimbase = 
 	parent = debian/noetic/rtt_rosdeployment
-	previous = 
+	previous = fd2ab076
