--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d8723a56
+	base = dd9ac330
 	trimbase = 
 	parent = release/noetic/rtt_ros_msgs
-	previous = 
+	previous = d8723a56
