--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4b7cc43
+	base = 5a355e6b
 	trimbase = 
 	parent = rpm/noetic/rtt_ros_msgs
-	previous = 
+	previous = d4b7cc43
