--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6094c049
+	base = a70e30f3
 	trimbase = 
 	parent = release/noetic/rtt_dynamic_reconfigure
-	previous = 
+	previous = 6094c049
