--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e74380e
+	base = b10f13c1
 	trimbase = 
 	parent = release/noetic/rtt_tf2_msgs
-	previous = 
+	previous = 7e74380e
