--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 609ca6f5
+	base = 32623744
 	trimbase = 
 	parent = rpm/noetic/rtt_tf2_msgs
-	previous = 
+	previous = 609ca6f5
