--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d739aee5
+	base = 5e447b81
 	trimbase = 
 	parent = rpm/noetic/rtt_ros_comm
-	previous = 
+	previous = d739aee5
