--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d1652bed
+	base = 4b742620
 	trimbase = 
 	parent = rpm/noetic/rtt_actionlib_msgs
-	previous = 
+	previous = d1652bed
