--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 934066bf
+	base = 7dfe87eb
 	trimbase = 
 	parent = release/noetic/rtt_common_msgs
-	previous = 
+	previous = 934066bf
