--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 649a62cb
+	base = 61b948ed
 	trimbase = 
 	parent = rpm/noetic/rtt_common_msgs
-	previous = 
+	previous = 649a62cb
