--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4523b9c8
+	base = b70fee7d
 	trimbase = 
 	parent = release/noetic/rtt_tf
-	previous = 
+	previous = 4523b9c8
