--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d39b4e40
+	base = b5e85a2d
 	trimbase = 
 	parent = rpm/noetic/rtt_tf
-	previous = 
+	previous = d39b4e40
