--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f01f12fe
+	base = b2eb6d99
 	trimbase = 
 	parent = release/noetic/rtt_ros
-	previous = 
+	previous = f01f12fe
