--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2942ed04
+	base = b1e2ee41
 	trimbase = 
 	parent = rpm/noetic/rtt_ros
-	previous = 
+	previous = 2942ed04
