--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0258ea9f
+	base = d5b973f1
 	trimbase = 
 	parent = rpm/noetic/rtt_visualization_msgs
-	previous = 
+	previous = 0258ea9f
