--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6dad5ca9
+	base = 62f8418b
 	trimbase = 
 	parent = release/noetic/rtt_rospack
-	previous = 
+	previous = 6dad5ca9
