--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce74f931
+	base = ab7468dc
 	trimbase = 
 	parent = rpm/noetic/rtt_rospack
-	previous = 
+	previous = ce74f931
