--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f1ef092f
+	base = 9e96986a
 	trimbase = 
 	parent = release/noetic/rtt_stereo_msgs
-	previous = 
+	previous = f1ef092f
