--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fe3a8de7
+	base = 5c4d0f6d
 	trimbase = 
 	parent = rpm/noetic/rtt_stereo_msgs
-	previous = 
+	previous = fe3a8de7
