--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f2cca5be
+	base = a220af02
 	trimbase = 
 	parent = release/noetic/rtt_roscomm
-	previous = 
+	previous = f2cca5be
