--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ab28a2b9
+	base = e8092af6
 	trimbase = 
 	parent = rpm/noetic/rtt_roscomm
-	previous = 
+	previous = ab28a2b9
