--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5cd52152
+	base = 6afba840
 	trimbase = 
 	parent = rpm/noetic/rtt_shape_msgs
-	previous = 
+	previous = 5cd52152
