--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d33a8e2
+	base = 5424121a
 	trimbase = 
 	parent = rpm/noetic/rtt_trajectory_msgs
-	previous = 
+	previous = 7d33a8e2
