--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 95ea5c9f
+	base = 38f49a7c
 	trimbase = 
 	parent = release/noetic/rtt_std_srvs
-	previous = 
+	previous = 95ea5c9f
