--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d1f12a6
+	base = 7c1b5068
 	trimbase = 
 	parent = rpm/noetic/rtt_std_srvs
-	previous = 
+	previous = 7d1f12a6
