--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d97f0cb5
+	base = 715cd667
 	trimbase = 
 	parent = release/noetic/rtt_ros_integration
-	previous = 
+	previous = d97f0cb5
