--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c3c0971d
+	base = de4e3439
 	trimbase = 
 	parent = rpm/noetic/rtt_ros_integration
-	previous = 
+	previous = c3c0971d
