--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f80172b
+	base = ba36bba8
 	trimbase = 
 	parent = rpm/noetic/rtt_nav_msgs
-	previous = 
+	previous = 0f80172b
