--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 19cefa82
+	base = 9841a04a
 	trimbase = 
 	parent = release/noetic/rtt_geometry_msgs
-	previous = 
+	previous = 19cefa82
