--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f2ce4594
+	base = 25168727
 	trimbase = 
 	parent = rpm/noetic/rtt_geometry_msgs
-	previous = 
+	previous = f2ce4594
