--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f1d5287c
+	base = b63dba62
 	trimbase = 
 	parent = rpm/noetic/rtt_rosparam
-	previous = 
+	previous = f1d5287c
