--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 174f9369
+	base = 8c388122
 	trimbase = 
 	parent = rpm/noetic/rtt_rosgraph_msgs
-	previous = 
+	previous = 174f9369
