--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f1c0f16d
+	base = 401ada9f
 	trimbase = 
 	parent = release/noetic/rtt_kdl_conversions
-	previous = 
+	previous = f1c0f16d
