--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f6b2301
+	base = 7a877932
 	trimbase = 
 	parent = rpm/noetic/rtt_kdl_conversions
-	previous = 
+	previous = 5f6b2301
