--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b25388ef
+	base = f27b0d26
 	trimbase = 
 	parent = release/noetic/rtt_std_msgs
-	previous = 
+	previous = b25388ef
