--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4aaa4af9
+	base = ee2b64af
 	trimbase = 
 	parent = rpm/noetic/rtt_std_msgs
-	previous = 
+	previous = 4aaa4af9
