--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4be0169c
+	base = 6b1d1ee2
 	trimbase = 
 	parent = release/noetic/rtt_rosnode
-	previous = 
+	previous = 4be0169c
