--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4ec2b343
+	base = 3696562c
 	trimbase = 
 	parent = rpm/noetic/rtt_rosnode
-	previous = 
+	previous = 4ec2b343
