--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 37402846
+	base = 9229ad48
 	trimbase = 
 	parent = release/noetic/rtt_sensor_msgs
-	previous = 
+	previous = 37402846
