--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ba12c235
+	base = ae088ed3
 	trimbase = 
 	parent = rpm/noetic/rtt_sensor_msgs
-	previous = 
+	previous = ba12c235
