--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = efc29957
+	base = 659d97fc
 	trimbase = 
 	parent = release/noetic/rtt_diagnostic_msgs
-	previous = 
+	previous = efc29957
