--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8022fe61
+	base = 32303f10
 	trimbase = 
 	parent = rpm/noetic/rtt_diagnostic_msgs
-	previous = 
+	previous = 8022fe61
