--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 227a99be
+	base = 21eb8aa1
 	trimbase = 
 	parent = rpm/noetic/rtt_rosclock
-	previous = 
+	previous = 227a99be
