--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 16613ee8
+	base = d25013c0
 	trimbase = 
 	parent = release/noetic/rtt_actionlib
-	previous = 
+	previous = 16613ee8
