--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f4adcaf8
+	base = 588bf349
 	trimbase = 
 	parent = rpm/noetic/rtt_actionlib
-	previous = 
+	previous = f4adcaf8
