--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4de6dc5d
+	base = 276a4889
 	trimbase = 
 	parent = rpm/noetic/rtt_rosdeployment
-	previous = 
+	previous = 4de6dc5d
