--- a/tracks.yaml
+++ b/tracks.yaml
@@ -134,9 +134,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: toolchain-2.10
+    last_release: toolchain-2.10
+    last_version: 2.10.0
     name: upstream
     patches: patches
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: git@github.com:orocos-gbp/rtt_ros_integration-release.git
     release_tag: :{ask}
     ros_distro: noetic
